// Copyright 2025 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.autoops;
option go_package = "github.com/bucketeer-io/bucketeer/proto/autoops";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/wrappers.proto";

import "proto/autoops/auto_ops_rule.proto";
import "proto/autoops/command.proto";
import "proto/autoops/ops_count.proto";
import "proto/autoops/progressive_rollout.proto";

message GetAutoOpsRuleRequest {
  reserved 1;
  string id = 2 [(google.api.field_behavior) = REQUIRED];
  string environment_id = 3 [(google.api.field_behavior) = REQUIRED];
}

message GetAutoOpsRuleResponse {
  AutoOpsRule auto_ops_rule = 1;
}

message CreateAutoOpsRuleRequest {
  reserved 1;
  CreateAutoOpsRuleCommand command = 2;
  string environment_id = 3;
}

message CreateAutoOpsRuleResponse {}

message ListAutoOpsRulesRequest {
  reserved 1;
  int64 page_size = 2;
  string cursor = 3;
  repeated string feature_ids = 4;
  string environment_id = 5 [(google.api.field_behavior) = REQUIRED];
}

message ListAutoOpsRulesResponse {
  repeated AutoOpsRule auto_ops_rules = 1;
  string cursor = 2;
}

message StopAutoOpsRuleRequest {
  reserved 1;
  string id = 2;
  StopAutoOpsRuleCommand command = 3;
  string environment_id = 4;
}

message StopAutoOpsRuleResponse {}

message DeleteAutoOpsRuleRequest {
  reserved 1;
  string id = 2;
  DeleteAutoOpsRuleCommand command = 3;
  string environment_id = 4;
}

message DeleteAutoOpsRuleResponse {}

message UpdateAutoOpsRuleRequest {
  reserved 1;
  string id = 2;
  // ChangeAutoOpsRuleOpsTypeCommand change_auto_ops_rule_ops_type_command = 3
  // [deprecated = true];
  reserved 3;
  repeated AddOpsEventRateClauseCommand add_ops_event_rate_clause_commands = 4;
  repeated ChangeOpsEventRateClauseCommand
      change_ops_event_rate_clause_commands = 5;
  repeated DeleteClauseCommand delete_clause_commands = 6;
  repeated AddDatetimeClauseCommand add_datetime_clause_commands = 7;
  repeated ChangeDatetimeClauseCommand change_datetime_clause_commands = 8;
  string environment_id = 9;
}

message UpdateAutoOpsRuleResponse {}

message ExecuteAutoOpsRequest {
  reserved 1;
  string id = 2;
  // ChangeAutoOpsRuleTriggeredAtCommand
  // change_auto_ops_rule_triggered_at_command = 3 [deprecated = true];
  reserved 3;
  ExecuteAutoOpsRuleCommand execute_auto_ops_rule_command = 4;
  string environment_id = 5;
}

message ExecuteAutoOpsResponse {
  bool already_triggered = 1;
}

message ListOpsCountsRequest {
  reserved 1;
  int64 page_size = 2;
  string cursor = 3;
  repeated string auto_ops_rule_ids = 4;
  repeated string feature_ids = 5;
  string environment_id = 6;
}

message ListOpsCountsResponse {
  string cursor = 1;
  repeated OpsCount ops_counts = 2;
}

message CreateProgressiveRolloutRequest {
  reserved 1;
  CreateProgressiveRolloutCommand command = 2;
  string environment_id = 3;
}

message CreateProgressiveRolloutResponse {}

message GetProgressiveRolloutRequest {
  reserved 1;
  string id = 2;
  string environment_id = 3;
}

message GetProgressiveRolloutResponse {
  ProgressiveRollout progressive_rollout = 1;
}

message StopProgressiveRolloutRequest {
  reserved 1;
  string id = 2;
  StopProgressiveRolloutCommand command = 3;
  string environment_id = 4;
}

message StopProgressiveRolloutResponse {}

message DeleteProgressiveRolloutRequest {
  reserved 1;
  string id = 2;
  DeleteProgressiveRolloutCommand command = 3;
  string environment_id = 4;
}

message DeleteProgressiveRolloutResponse {}

message ListProgressiveRolloutsRequest {
  enum OrderBy {
    DEFAULT = 0;
    CREATED_AT = 1;
    UPDATED_AT = 2;
  }
  enum OrderDirection {
    ASC = 0;
    DESC = 1;
  }
  reserved 1;
  int64 page_size = 2;
  string cursor = 3;
  repeated string feature_ids = 4;
  OrderBy order_by = 5;
  OrderDirection order_direction = 6;
  optional ProgressiveRollout.Status status = 7;
  optional ProgressiveRollout.Type type = 8;
  string environment_id = 9;
}

message ListProgressiveRolloutsResponse {
  repeated ProgressiveRollout progressive_rollouts = 1;
  string cursor = 2;
  int64 total_count = 3;
}

message ExecuteProgressiveRolloutRequest {
  reserved 1;
  string id = 2;
  ChangeProgressiveRolloutScheduleTriggeredAtCommand
      change_progressive_rollout_triggered_at_command = 3;
  string environment_id = 4;
}

message ExecuteProgressiveRolloutResponse {}

service AutoOpsService {
  rpc GetAutoOpsRule(GetAutoOpsRuleRequest) returns (GetAutoOpsRuleResponse) {
    option (google.api.http) = {
      get: "/v1/auto_ops_rule"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get"
      description: "Get auto ops rule."
      tags: "auto_ops_rule"
      operation_id: "web.v1.auto_ops_rule.get"
      responses: {
        key: "400"
        value: {
          description: "Returned for bad requests that may have failed validation."
          schema: { json_schema: { ref: ".google.rpc.Status" } }
          examples: {
            key: "application/json"
            value: '{ "code": 3, "message": "invalid arguments error", "details": [] }'
          }
        }
      }
      responses: {
        key: "401"
        value: {
          description: "Request could not be authenticated (authentication required)."
          schema: { json_schema: { ref: ".google.rpc.Status" } }
          examples: {
            key: "application/json"
            value: '{ "code": 16, "message": "not authenticated", "details": [] }'
          }
        }
      }
    };
  }
  rpc ListAutoOpsRules(ListAutoOpsRulesRequest)
      returns (ListAutoOpsRulesResponse) {
    option (google.api.http) = {
      get: "/v1/auto_ops_rules"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List"
      description: "List auto ops rules."
      tags: "auto_ops_rule"
      operation_id: "web.v1.auto_ops_rule.list"
      responses: {
        key: "400"
        value: {
          description: "Returned for bad requests that may have failed validation."
          schema: { json_schema: { ref: ".google.rpc.Status" } }
          examples: {
            key: "application/json"
            value: '{ "code": 3, "message": "invalid arguments error", "details": [] }'
          }
        }
      }
      responses: {
        key: "401"
        value: {
          description: "Request could not be authenticated (authentication required)."
          schema: { json_schema: { ref: ".google.rpc.Status" } }
          examples: {
            key: "application/json"
            value: '{ "code": 16, "message": "not authenticated", "details": [] }'
          }
        }
      }
    };
  }
  rpc CreateAutoOpsRule(CreateAutoOpsRuleRequest)
      returns (CreateAutoOpsRuleResponse) {}
  rpc StopAutoOpsRule(StopAutoOpsRuleRequest)
      returns (StopAutoOpsRuleResponse) {}
  rpc DeleteAutoOpsRule(DeleteAutoOpsRuleRequest)
      returns (DeleteAutoOpsRuleResponse) {}
  rpc UpdateAutoOpsRule(UpdateAutoOpsRuleRequest)
      returns (UpdateAutoOpsRuleResponse) {}
  rpc ExecuteAutoOps(ExecuteAutoOpsRequest) returns (ExecuteAutoOpsResponse) {}
  rpc ListOpsCounts(ListOpsCountsRequest) returns (ListOpsCountsResponse) {}
  rpc CreateProgressiveRollout(CreateProgressiveRolloutRequest)
      returns (CreateProgressiveRolloutResponse) {}
  rpc GetProgressiveRollout(GetProgressiveRolloutRequest)
      returns (GetProgressiveRolloutResponse) {}
  rpc StopProgressiveRollout(StopProgressiveRolloutRequest)
      returns (StopProgressiveRolloutResponse) {}
  rpc DeleteProgressiveRollout(DeleteProgressiveRolloutRequest)
      returns (DeleteProgressiveRolloutResponse) {}
  rpc ListProgressiveRollouts(ListProgressiveRolloutsRequest)
      returns (ListProgressiveRolloutsResponse) {}
  rpc ExecuteProgressiveRollout(ExecuteProgressiveRolloutRequest)
      returns (ExecuteProgressiveRolloutResponse) {}
}
